Update index.html tour dates to match first four on TOUR page

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
         <div class="tour-dates">
             <h2>🎸 UPCOMING TOUR DATES 🎸</h2>
             <ul>
-                <li>June 15 - Seattle, WA @ The Grunge Palace</li>
-                <li>June 22 - Portland, OR @ Pickle Paradise</li>
-                <li>July 1 - San Francisco, CA @ The Flannel Factory</li>
-                <li>July 15 - Los Angeles, CA @ The Pickle Pit</li>
+                <li>March 3, 2000 - CBGB, New York, NY</li>
+                <li>March 5, 2000 - The Knitting Factory, Brooklyn, NY</li>
+                <li>March 7, 2000 - Trocadero Theatre, Philadelphia, PA</li>
+                <li>March 9, 2000 - The 9:30 Club, Washington, DC</li>
             </ul>
         </div>
 
